--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   backend:
-    image: python:3.10
+    build: ../backend
     container_name: ztna-backend
     ports:
       - "8000:8000"
@@ -9,7 +9,7 @@ services:
       - ../backend:/app
 
   frontend:
-    image: node:18
+    build: ../frontend
     container_name: ztna-frontend
     ports:
       - "3000:3000"
