--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,19 @@
-#backend/Dockerfile
+FROM python:3.11-slim
 
-FROM python:3.10-slim
+WORKDIR /app  # This matches the /backend directory
 
-WORKDIR /app
+RUN apt-get update && apt-get install -y gcc
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements.txt ./
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
 
 COPY . .
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+ENV PYTHONPATH=/app
+
+EXPOSE 8000
+
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+
