Added Keycloak container

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -31,6 +31,19 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0.1
+    container_name: ztna-keycloak
+    environment:
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=adminsecure123   # CHANGE before production
+    ports:
+      - "8080:8080"
+    command: start-dev
+    volumes:
+      - keycloak_data:/opt/keycloak/data
+    restart: unless-stopped
 
 volumes:
   pgdata:
+  keycloak_data:
