--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,27 @@
+alembic==1.17.1
 annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.11.0
+asyncpg==0.30.0
 bcrypt==5.0.0
 certifi==2025.10.5
 cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.0
 colorama==0.4.6
-cryptography==46.0.3
+cryptography==41.0.7
 dnspython==2.8.0
 ecdsa==0.19.1
 email-validator==2.3.0
 fastapi==0.121.0
 greenlet==3.2.4
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.11
 jose==1.0.0
+Mako==1.3.10
+MarkupSafe==3.0.3
 passlib==1.7.4
 psycopg2-binary==2.9.11
 pyasn1==0.6.1
