Add Device Attestation, Add Security Featues, Implement Token Service and device page, Modify ngrok updation script

--- a/infra/nginx/conf.d/default.conf
+++ b/infra/nginx/conf.d/default.conf
@@ -43,6 +43,35 @@ server {
         # The backend will handle both preflight (OPTIONS) and actual requests
     }
 
+    # Protected resources - requires JWT token validation
+    # This route is for the demo: only enrolled users with DPA can access
+    location /api/resources/ {
+        # First, validate JWT token by calling backend verification endpoint
+        # If token is missing or invalid, return 401
+        set $token_valid 0;
+        set $token "";
+        
+        # Extract token from Authorization header
+        if ($http_authorization ~* "^Bearer\s+(.+)$") {
+            set $token $1;
+        }
+        
+        # Validate token via backend (using auth_request would be better, but requires auth_request module)
+        # For now, we'll pass the token to backend and let it validate
+        # The backend /api/resources/ endpoints will validate the token
+        
+        proxy_pass http://backend;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        # Pass Authorization header to backend for validation
+        proxy_set_header Authorization $http_authorization;
+        
+        # CORS is handled by backend
+    }
+
     # Keycloak resources (admin console loads from /resources/...)
     # Route these to Keycloak without /auth prefix
     location /resources/ {
@@ -53,6 +82,12 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Forwarded-Host $host;
+        
+        # Fix HTTP URLs in JavaScript files - critical for CSP compliance
+        # Keycloak's JS files contain hardcoded HTTP URLs that need to be HTTPS
+        sub_filter 'http://' 'https://';
+        sub_filter_once off;
+        sub_filter_types text/javascript application/javascript application/x-javascript;
     }
 
     # Keycloak realms (login forms POST to /realms/...)
@@ -106,14 +141,15 @@ server {
         
         # Rewrite redirect Location headers - but be careful not to double-add /auth
         # Only rewrite root redirects, not paths that already have /auth
-        proxy_redirect http://$host/ /auth/;
-        proxy_redirect https://$host/ /auth/;
+        proxy_redirect http://$host/ https://$host/auth/;
+        proxy_redirect https://$host/ https://$host/auth/;
         
-        # Rewrite URLs in JSON response: add /auth before /realms
+        # Rewrite URLs in JSON response: add /auth before /realms and force HTTPS
         # This ensures OIDC discovery URLs work through the proxy
-        # Keycloak returns: "https://domain.com/realms/master/protocol/..."
+        # Keycloak returns: "http://domain.com/realms/master/protocol/..."
         # We need: "https://domain.com/auth/realms/master/protocol/..."
-        # Replace /realms/ with /auth/realms/ - this should only match once per URL
+        # First convert HTTP to HTTPS, then add /auth prefix
+        sub_filter '"http://' '"https://';
         sub_filter '/realms/' '/auth/realms/';
         sub_filter_once off;
         sub_filter_types application/json;
@@ -131,17 +167,17 @@ server {
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Prefix /auth;
         
-        # Rewrite redirect Location headers to include /auth prefix
+        # Rewrite redirect Location headers to include /auth prefix and force HTTPS
         # This fixes Keycloak redirects (e.g., /admin -> /auth/admin)
         # Handle various redirect patterns
-        proxy_redirect http://$host/ /auth/;
-        proxy_redirect https://$host/ /auth/;
-        proxy_redirect http://$host/admin/ /auth/admin/;
-        proxy_redirect https://$host/admin/ /auth/admin/;
-        proxy_redirect http://$host/realms/ /auth/realms/;
-        proxy_redirect https://$host/realms/ /auth/realms/;
+        proxy_redirect http://$host/ https://$host/auth/;
+        proxy_redirect https://$host/ https://$host/auth/;
+        proxy_redirect http://$host/admin/ https://$host/auth/admin/;
+        proxy_redirect https://$host/admin/ https://$host/auth/admin/;
+        proxy_redirect http://$host/realms/ https://$host/auth/realms/;
+        proxy_redirect https://$host/realms/ https://$host/auth/realms/;
         
-        # Also rewrite URLs in response bodies (for HTML/JS that might contain URLs)
+        # Rewrite URLs in response bodies (for HTML/JS that might contain URLs)
         # NOTE: Do NOT include application/json here - the well-known endpoint handles that
         # NOTE: Be careful not to break Keycloak admin console - only rewrite specific patterns
         # Don't rewrite /resources/ or /realms/ as those are handled by specific location blocks
@@ -149,8 +185,12 @@ server {
         sub_filter "href='/admin" "href='/auth/admin";
         sub_filter 'href="/realms' 'href="/auth/realms';
         sub_filter "href='/realms" "href='/auth/realms";
+        # Fix HTTP URLs in JavaScript - critical for CSP compliance
+        # Replace http:// with https:// for ngrok domains (pattern matching)
+        # This fixes hardcoded HTTP URLs in Keycloak's JavaScript
+        sub_filter 'http://' 'https://';
         sub_filter_once off;
-        sub_filter_types text/html;
+        sub_filter_types text/html text/javascript application/javascript application/x-javascript;
     }
     
     # Handle /auth (without trailing slash) - redirect to /auth/
