--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -30,11 +30,16 @@ services:
       - KC_DB_USERNAME=keycloak
       - KC_DB_PASSWORD=keycloakpass
       - KC_HOSTNAME_STRICT=false
-      - KC_HOSTNAME_STRICT_HTTPS=false
+      - KC_HOSTNAME_STRICT_HTTPS=true
       - KC_HTTP_ENABLED=true
       - KC_HEALTH_ENABLED=true
       - KC_PROXY=edge
       - KC_PROXY_ADDRESS_FORWARDING=true
+      # Set hostname (extract from EXTERNAL_KEYCLOAK_URL if set)
+      # Format: hostname only (e.g., 609b9c24fbd6.ngrok-free.app)
+      - KC_HOSTNAME=${KC_HOSTNAME:-609b9c24fbd6.ngrok-free.app}
+      # Trust proxy headers (important for HTTPS detection)
+      - KC_PROXY_HEADERS=xforwarded
     ports:
       - "8080:8080"
     command: start-dev --import-realm
