Fix Logout redirect uri bug

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-# Database Configuration
+﻿# Database Configuration
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=ztna
@@ -13,11 +13,10 @@ POSTGRES_PASSWORD=supersecret
 OIDC_ISSUER=http://keycloak:8080/realms/master
 OIDC_JWKS_URI=http://keycloak:8080/realms/master/protocol/openid-connect/certs
 OIDC_CLIENT_ID=ZTNA-Platform-realm
-OIDC_CLIENT_SECRET=mcKyWxQdjQ6nCLgVfAfXI4j3Flqk9SS7
-
+OIDC_CLIENT_SECRET=CJQV1KH37VssFmtNTOUIH5iEMkWcwRob
 # CORS Configuration
 # Comma-separated list of allowed origins
-CORS_ORIGIN=https://609b9c24fbd6.ngrok-free.app,http://localhost:3000,http://localhost
+CORS_ORIGIN=https://unimplied-untranscendental-denita.ngrok-free.dev,http://localhost:3000,http://localhost
 
 # Optional Settings
 ACCESS_TOKEN_EXPIRE_MINUTES=15
