--- a/infra/.env
+++ b/infra/.env
@@ -4,12 +4,12 @@
 
 # External frontend URL (used for React app environment variables)
 # Example: EXTERNAL_FRONTEND_URL=https://609b9c24fbd6.ngrok-free.app
-EXTERNAL_FRONTEND_URL=https://609b9c24fbd6.ngrok-free.app
+EXTERNAL_FRONTEND_URL=https://unimplied-untranscendental-denita.ngrok-free.dev
 
 # External Keycloak URL (used for React app environment variables)
 # Example: EXTERNAL_KEYCLOAK_URL=https://609b9c24fbd6.ngrok-free.app/auth
-EXTERNAL_KEYCLOAK_URL=https://609b9c24fbd6.ngrok-free.app/auth
+EXTERNAL_KEYCLOAK_URL=https://unimplied-untranscendental-denita.ngrok-free.dev/auth
 
 # CORS origins for external access (comma-separated)
 # Example: EXTERNAL_CORS_ORIGINS=https://609b9c24fbd6.ngrok-free.app,http://localhost:3000
-EXTERNAL_CORS_ORIGINS=https://609b9c24fbd6.ngrok-free.app,http://localhost:3000,http://localhost
+EXTERNAL_CORS_ORIGINS=https://unimplied-untranscendental-denita.ngrok-free.dev,http://localhost:3000,http://localhost
