--- a/infra/nginx/conf.d/default.conf
+++ b/infra/nginx/conf.d/default.conf
@@ -197,6 +197,12 @@ server {
     location = /auth {
         return 301 /auth/;
     }
+    
+    # Handle /auth/login - Keycloak sometimes redirects here after logout
+    # Redirect to frontend login page instead
+    location = /auth/login {
+        return 302 /login;
+    }
 
     # Health check endpoint
     location /health {
